test_fixtures/if/class_in_else.lox
// ParserError: UnexpectedExpressionToken found Class from l2c22 to l2c27
if (true) "ok"; else class Foo {}
